welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: missing arguments for method nearHundred in class nearHundred;
follow this method with `_' if you want to treat it as a partially applied function
  return 90 < nearHundred || nearHundred < 110 || 190 < nearHundred || nearHundred < 210
              ^nearHundred:2: error: missing arguments for method nearHundred in class nearHundred;
follow this method with `_' if you want to treat it as a partially applied function
  return 90 < nearHundred || nearHundred < 110 || 190 < nearHundred || nearHundred < 210
                             ^nearHundred:2: error: missing arguments for method nearHundred in class nearHundred;
follow this method with `_' if you want to treat it as a partially applied function
  return 90 < nearHundred || nearHundred < 110 || 190 < nearHundred || nearHundred < 210
                                                        ^nearHundred:2: error: missing arguments for method nearHundred in class nearHundred;
follow this method with `_' if you want to treat it as a partially applied function
  return 90 < nearHundred || nearHundred < 110 || 190 < nearHundred || nearHundred < 210
                                                                       ^